--- a/style.css
+++ b/style.css
@@ -51,6 +51,21 @@ body {
     animation: popUp 0.3s ease-in-out;
 }
 
+#toggle-thumbnail-container {
+    position: absolute;
+    top: 20px; 
+    left: 25%;
+    transform: translateX(-50%);
+    background-color: rgb(81, 55, 183, 0.6);
+    color: white;
+    border: none;
+    height: 30px;
+    padding: 10px 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size:10px;
+}
+
 @media (max-width: 1200px) {
     #thumbnail-container {
         flex-direction: row;
@@ -133,14 +148,14 @@ button:hover {
 audio#background-music {
    position: absolute;
    top: 20px;
-   left: 50%;
+   left: 70%;
    transform: translateX(-50%);
    width: 300px;
-   height: 20px;
+   height: 30px;
 }
 
 audio::-webkit-media-controls-panel {
-    background-color: rgb(81, 55, 183, 0.8);
+    background-color: rgb(81, 55, 183, 0.6);
 }
 audio::-webkit-media-controls-current-time-display,
 audio::-webkit-media-controls-time-remaining-display {
